# wasm-text-rendering

./: .gitignore  README.md  deploy.sh  index.html  package-lock.json  package.json  vercel-build.sh  vercel.json  vite.config.ts
assets/: index.935058e9.js  index.ff15d107.css
src/: App.tsx  main.tsx
wasm/: Cargo.toml
wasm/src/: draw.rs  lib.rs
